--- a/src/components/Teams/TeamsOverview.css
+++ b/src/components/Teams/TeamsOverview.css
@@ -40,3 +40,31 @@
   .card-text i {
     margin-right: 5px;
   }
+
+@media (max-width: 768px) {
+  .teams__overview--top {
+    margin-left: auto;
+    margin-right: auto; /* Center the table */
+  }
+}
+
+@media (max-width: 575px) {
+  .teams__overview--top {
+    font-size: 9px; /* Reduce font size to prevent overflow */
+  }
+}
+
+@media (max-width: 479px) {
+  .members-modal-table {
+    overflow-x: auto; /* Fix side-scrolling in modal */
+  }
+}
+
+@media (max-width: 768px) {
+  .card#card_team, .card#card_active {
+    width: auto; /* Decrease the width of the cards */
+    height: 30px; /* Decrease the height of the cards */
+    font-size: 8px; /* Adjust font size */
+  }
+}
+
